<?xml version="1.0" encoding="utf-8"?>
<!--    Program Name: Score Keeper

    Programmer: Paul Vurlan

    DETAILS: Program is a score keeper for Rugby Union with a counter for the opposing team
    Source code is based on Udacity Court Counter program
    Copyrights remain with original companies/people

    Points awards as follows:
    - Try (5 points)
    - Conversion (2 points)
    - Drop Goal (3 points)
    - Penalty (3 points)
    Source: https://passport.worldrugby.org/?page=beginners&p=4
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.scorekeeperrugby.MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:src="@drawable/ball2"
        android:contentDescription="@string/image1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_bottom"
                android:layout_marginTop="@dimen/margin_top_bottom"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:text="@string/teama"
                android:textColor="@color/colorRugby"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_text"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/score0"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_buttom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addFiveForTeamA"
                android:text="@string/try_score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_buttom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addTwoForTeamA"
                android:text="@string/conversion" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_buttom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addThreeForTeamA"
                android:text="@string/dropgoal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_buttom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addThreeForTeamA"
                android:text="@string/penalty" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/one"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_bottom"
                android:layout_marginTop="@dimen/margin_top_bottom"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:text="@string/teamb"
                android:textColor="@color/colorRugby"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_text"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/score0"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_large" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_buttom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addFiveForTeamB"
                android:text="@string/try_score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_buttom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addTwoForTeamB"
                android:text="@string/conversion" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_buttom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addThreeForTeamB"
                android:text="@string/dropgoal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_buttom"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:layout_marginRight="@dimen/margin_left_right"
                android:onClick="addThreeForTeamB"
                android:text="@string/penalty" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:onClick="resetScores"
        android:text="@string/reset" />

</RelativeLayout>
